# sts-delegate-rs

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  deny.toml
.github/ISSUE_TEMPLATE/: architecture.md  bug_report.md  config.yml  parity.md  security.md
.github/workflows/: ci.yml  release.yml  supply-chain.yml
crates/sts-cli/: Cargo.toml
crates/sts-cli/src/: main.rs
crates/sts-config/: Cargo.toml
crates/sts-config/src/: lib.rs
crates/sts-core/: Cargo.toml
crates/sts-core/src/: lib.rs
crates/sts-dpop/: Cargo.toml
crates/sts-dpop/src/: lib.rs
crates/sts-http/: Cargo.toml  openapi.json
crates/sts-http/src/: lib.rs
crates/sts-http/tests/: http_contract.rs
crates/sts-jose/: Cargo.toml
crates/sts-jose/src/: lib.rs
crates/sts-replay/: Cargo.toml
crates/sts-replay/src/: lib.rs
crates/sts-verify/: Cargo.toml
crates/sts-verify/src/: lib.rs
deploy/kubernetes/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secret.template.yaml  service.yaml
deploy/terraform/kubernetes/: README.md  main.tf  outputs.tf  variables.tf
docs/architecture/: jwe-mlkem-oracle-risks.md  kms-hsm-signer-spi.md  shared-replay-backend.md
docs/conformance/: rfc-curl-conformance-pack.md
docs/explanation/: okta-mcp-obo-plan.md
docs/operations/: cloud-roadmap.md  production-runbook.md  release-security.md
docs/reference/: product-surface.md
docs/requirements/: obo-lab-contract-coverage.md  rust-v2-contract-ledger.md
scripts/: check_architecture_boundaries.py  docker_smoke.sh  generate_release_sbom.py  install_supply_chain_tools.sh  live_rust_sts_canary.py  oracle_contract_smoke.sh  package_release.sh  real_tenant_endpoint_loop.py  security_audit_loop.py
scripts/conformance/: rfc_curl_conformance.sh
supply-chain/: config.toml
