[workspace]
members = [
    "crates/sts-core",
    "crates/sts-jose",
    "crates/sts-verify",
    "crates/sts-replay",
    "crates/sts-config",
    "crates/sts-http",
    "crates/sts-cli",
]
resolver = "2"

[workspace.package]
description = "Rust-native security token service for OAuth token exchange and sts-delegate parity work."
edition = "2024"
license = "MIT"
publish = false
readme = "README.md"
repository = "https://github.com/paul007ex/sts-delegate-rs"
version = "0.1.0"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unsafe_code = "deny"
