[package]
name = "sts-cli"
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
sts-http = { version = "0.1.0", path = "../sts-http" }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
