[package]
name = "sts-cli"
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22"
clap = { version = "4.6.1", default-features = false, features = ["derive", "help", "std", "usage"] }
serde_json = "1"
sts-http = { version = "0.1.0", path = "../sts-http" }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
