[package]
name = "sts-cli"
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
pqc-openssl-unstable = ["sts-http/pqc-openssl-unstable", "sts-jose/pqc-openssl-unstable"]

[dependencies]
base64 = "0.22"
clap = { version = "4.6.1", default-features = false, features = ["derive", "help", "std", "usage"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha2 = "0.10"
sts-dpop = { version = "0.1.0", path = "../sts-dpop" }
sts-http = { version = "0.1.0", path = "../sts-http" }
sts-jose = { version = "0.1.0", path = "../sts-jose" }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
