[package]
name = "sts-dpop"
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["aws_lc_rs"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[dev-dependencies]
