[package]
name = "sts-http"
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
axum = "0.8.9"
base64 = "0.22"
http = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sts-config = { version = "0.1.0", path = "../sts-config" }
sts-core = { version = "0.1.0", path = "../sts-core" }
sts-jose = { version = "0.1.0", path = "../sts-jose" }
sts-replay = { version = "0.1.0", path = "../sts-replay" }
sts-verify = { version = "0.1.0", path = "../sts-verify" }
url = "2"

[dev-dependencies]
http-body-util = "0.1"
rsa = { version = "0.9", features = ["pem"] }
serde_urlencoded = "0.7"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.3", features = ["util"] }
