[package]
name = "sts-http"
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["pqc-openssl-unstable"]
pqc-openssl-unstable = ["sts-jose/pqc-openssl-unstable", "sts-verify/pqc-openssl-unstable"]

[dependencies]
axum = "0.8.9"
base64 = "0.22"
http = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sts-config = { version = "0.1.0", path = "../sts-config" }
sts-core = { version = "0.1.0", path = "../sts-core" }
sts-dpop = { version = "0.1.0", path = "../sts-dpop" }
sts-jose = { version = "0.1.0", path = "../sts-jose", default-features = false }
sts-replay = { version = "0.1.0", path = "../sts-replay" }
sts-verify = { version = "0.1.0", path = "../sts-verify", default-features = false }
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
url = "2"

[dev-dependencies]
aws-lc-rs = "1.17.0"
http-body-util = "0.1"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["aws_lc_rs"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde_urlencoded = "0.7"
tower = { version = "0.5.3", features = ["util"] }
