[package]
name = "sts-jose"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", features = ["oid"] }
signature = "2"
sts-core = { path = "../sts-core" }

[dev-dependencies]
rand = "0.8"
