[package]
name = "sts-jose"
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
aws-lc-rs = "1.17.0"
base64 = "0.22"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["aws_lc_rs", "use_pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_asn1 = "0.6"
sts-core = { version = "0.1.0", path = "../sts-core" }
