[package]
name = "sts-verify"
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["pqc-openssl-unstable"]
pqc-openssl-unstable = ["sts-jose/pqc-openssl-unstable"]

[dependencies]
base64 = "0.22"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", features = ["oid"] }
subtle = "2"
sts-jose = { version = "0.1.0", path = "../sts-jose", default-features = false }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
url = "2"

[dev-dependencies]
axum = "0.8.9"
sts-core = { version = "0.1.0", path = "../sts-core" }
